[package]
name = "comandare"
version = "0.2.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "TCP Command Execution"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/comandare"
homepage = "https://crates.io/crates/comandare"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "comandare"
path = "src/lib.rs"

[[bin]]
name = "comandare"
path = "src/bin.rs"